# jiva

./: .babelrc  .env  .env.example  .gitignore  .gitlab-ci.yml  Procfile  README.md  db.sqlite3  jest.config.js  jest.setup.js  jsconfig.json  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  sonar-project.properties
__tests__/: common.test.jsx  guide.test.jsx  index.test.jsx  login.test.jsx  register.test.jsx
account/: models.py  serializers.py  tests.py  urls.py  views.py
api/: constants.js  http.js  https.js  index.js
backend/: .env.example  .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  requirements.txt
backend/.gitlab/: .gitlab-webide.yml
backend/account/: models.py  serializers.py  urls.py  views.py
backend/jadwal/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/jadwal/migrations/: 0001_initial.py
backend/jiva_be/: asgi.py  urls.py
backend/klinik/: admin.py  apps.py  serializers.py  signals.py  tests.py  urls.py  utils.py
backend/klinik/migrations/: 0002_lamaranpasien_email.py  0003_lamaranpasien_nama.py
backend/klinik/templates/: mail_template.html
backend/rekammedis/: apps.py  models.py  serializers.py  tests.py
components/: Navbar.jsx  Sidebar.jsx
connection/: http.js  index.js
frontend/: .gitignore  jest.config.js  jsconfig.json  next.config.js  package-lock.json  package.json
jadwal/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
jiva_be/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
klinik/: admin.py  apps.py  factory.py  (+9 more)
(+261 files in other folders)
