[tool.poetry]
name = "jiva-backend"
version = "0.1.0"
description = "Backed for Jiva ERP"
authors = ["Dennis A. Walangadi <dennisaw2000@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
djangorestframework = "^3.13.1"
Django = "^4.0.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
